# jaxish

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: unit-tests.yml
src/: __init__.py  grad.py  jit.py  lax.py  vmap.py
src/test/: __init__.py  conftest.py  test_grad.py  test_jit.py  test_lax.py  test_vmap.py
